# MicrosoftFoundryHostedAgent

./: .gitignore  README.md  azure.yaml  deploy.sh
.devcontainer/: devcontainer.json
agent/: Dockerfile  hostedAgent.py  pyproject.toml
infra/: main.bicep  main.parameters.json
scripts/: deploy_foundry_hosted_agent.py  postprovision.sh  pyproject.toml  test.http
